actions-runner-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.org/mergeable-ingress-type: minion
  name: actions-runner-controller-github-webhook-server
spec:
  ingressClassName: nginx
  rules:
    - host: home.crazypokemondev.de
      http:
        paths:
          - backend:
              service:
                name: actions-runner-controller-github-webhook-server
                port:
                  number: 80
            path: /actions-runner-controller-github-webhook-server
            pathType: Prefix
